fix extra space in login form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,18 @@
 
 @import "bootstrap";
 
+.login-button {
+  @extend .btn;
+  @extend .btn-small;
+  @extend .btn-inverse;
+  margin-bottom: 0px;
+}
+
 form {
+  margin-bottom: 0px;
+}
+
+.login-form {
   margin-bottom: 0px;
 }
 
